# synfony

./: .gitignore  Cargo.toml  README.md
examples/hello-api/: .env  Cargo.toml
examples/hello-api/config/: app.yaml
examples/hello-api/src/: main.rs
examples/hello-api/src/controller/: admin_controller.rs  auth_controller.rs  health_controller.rs  login_controller.rs  mod.rs  profile_controller.rs  user_controller.rs
examples/hello-api/src/dto/: mod.rs
examples/hello-api/src/entity/: user.rs
examples/hello-api/src/event/: mod.rs
examples/hello-api/src/message/: mod.rs
examples/hello-api/src/repository/: mod.rs
examples/hello-api/src/service/: mod.rs
synfony/: Cargo.toml
synfony-config/: Cargo.toml
synfony-config/src/: env.rs  lib.rs  loader.rs
synfony-console/: Cargo.toml
synfony-console/src/: io.rs  lib.rs  style.rs
synfony-core/: Cargo.toml
synfony-core/src/: application.rs  error.rs  kernel.rs  lib.rs  state.rs
synfony-core/src/routing/: mod.rs  registry.rs  url_generator.rs
synfony-di/: Cargo.toml
synfony-di/src/: container.rs  inject.rs  lib.rs
synfony-event/: Cargo.toml
synfony-event/src/: dispatcher.rs  lib.rs
synfony-macros/: Cargo.toml
synfony-macros/src/: controller.rs  lib.rs  route.rs  service.rs
synfony-messenger/: Cargo.toml
synfony-messenger/src/: bus.rs  handler.rs  lib.rs
synfony-orm/: Cargo.toml
synfony-orm/src/: connection.rs  entity_manager.rs  error.rs  lib.rs  repository.rs
synfony-security/: Cargo.toml
synfony-security/src/: authenticator.rs  current_user.rs  error.rs  firewall.rs  jwt.rs  lib.rs  token.rs  voter.rs
synfony-serializer/: Cargo.toml
synfony-serializer-macros/: Cargo.toml
synfony-serializer-macros/src/: lib.rs
synfony-serializer/src/: grouped_json.rs  lib.rs
synfony-validation/: Cargo.toml
synfony-validation/src/: error.rs  json_body.rs  lib.rs  query_params.rs
synfony/src/: lib.rs
