[workspace]
resolver = "2"
members = [
    "synfony",
    "synfony-core",
    "synfony-macros",
    "synfony-di",
    "synfony-config",
    "synfony-console",
    "synfony-security",
    "synfony-orm",
    "synfony-validation",
    "synfony-serializer",
    "synfony-serializer-macros",
    "synfony-event",
    "synfony-messenger",
    "examples/hello-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/synfony-framework/synfony"
description = "A Symfony-inspired web framework for Rust"

[workspace.dependencies]
# Web stack
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# Proc macros
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

# DI
inventory = "0.3"

# Configuration
dotenvy = "0.15"
config = "0.15"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.12"
indicatif = "0.18"
comfy-table = "7"
console = "0.16"

# Validation
validator = { version = "0.19", features = ["derive"] }

# ORM
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1" }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
async-trait = "0.1"

# Internal crates
synfony = { path = "synfony" }
synfony-core = { path = "synfony-core" }
synfony-macros = { path = "synfony-macros" }
synfony-di = { path = "synfony-di" }
synfony-config = { path = "synfony-config" }
synfony-console = { path = "synfony-console" }
synfony-security = { path = "synfony-security" }
synfony-orm = { path = "synfony-orm" }
synfony-validation = { path = "synfony-validation" }
synfony-serializer = { path = "synfony-serializer" }
synfony-serializer-macros = { path = "synfony-serializer-macros" }
synfony-event = { path = "synfony-event" }
synfony-messenger = { path = "synfony-messenger" }
