[package]
name = "synfony-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration system for Synfony with YAML and .env support"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
