[package]
name = "synfony-event"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Event dispatcher component for Synfony — Symfony EventDispatcher equivalent"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
