[package]
name = "synfony-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for the Synfony framework"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
