[package]
name = "synfony-messenger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Message bus component for Synfony — Symfony Messenger equivalent for async job dispatching"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
