[package]
name = "synfony-security"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Security component for Synfony — authentication, authorization, firewalls, voters"

[dependencies]
synfony-config = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
