[package]
name = "synfony-serializer-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for Synfony serialization groups"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
