[package]
name = "synfony"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Symfony-inspired web framework for Rust — familiar patterns, Rust performance"

[dependencies]
synfony-macros = { workspace = true }
synfony-core = { workspace = true }
synfony-di = { workspace = true }
synfony-config = { workspace = true }
synfony-console = { workspace = true }
synfony-security = { workspace = true }
synfony-orm = { workspace = true }
synfony-validation = { workspace = true }
synfony-serializer = { workspace = true }
synfony-event = { workspace = true }
synfony-messenger = { workspace = true }

# Re-export key dependencies so users don't need to depend on them directly
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
