[package]
name = "hello-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
synfony = { workspace = true }
synfony-security = { workspace = true }
synfony-orm = { workspace = true }
synfony-validation = { workspace = true }
synfony-serializer = { workspace = true }
synfony-event = { workspace = true }
synfony-messenger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
